2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_grab_focus): 
	* gtk/gtkcombobox.c (gtk_combo_box_grab_focus): Implement
	grab_focus for GtkComboBox and GtkComboBoxEntry.  (#171912,
	Gustavo Carneiro)

	* gtk/gtkicontheme.c: Store icon caches along with the
	mtimes of the toplevel directories. The previous
	mechanism of a hashtable-per-theme caused duplicate icon
	caches for the same toplevel directory to be created.  
	(#170030)

2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_build_level): 
	Fix a typo in a warning.

	* gtk/gtkaboutdialog.c (gtk_about_dialog_init): Protect
	the license and credits buttons from being affected by 
	gtk_widget_show_all().  (#172724)

2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenushell.c (gtk_menu_shell_activate_item): Keep a 
	reference to the item.  (#167920, Hazael Maldonado Torres)

	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Add some
	more docs on interactive search.

2005-04-05  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkvisual-win32.c (_gdk_visual_init): Handle 16 colour
	display mode. For some reason, in this mode GetDeviceCaps(BITSPIXEL)
	returns 1 (but GetDeviceCaps(NUMCOLORS)	does return 16). (#143415)

	* gdk/win32/gdkvisual-win32.c (_gdk_visual_init): Don't force
	24bpp GdkVisual on 32bpp displays. (#140706)

Mon Apr  4 19:13:23 2005  Jonathan Blandford  <jrb@redhat.com>

	Fix for #172319, Tristan Van Berkom:
	
	* gtk/gtktreeview.c (gtk_tree_view_expand_all): change to use
	gtk_tree_view_real_expand_row() instead of doing this by hand.

2005-04-04  Johan Dahlin  <johan@gnome.org>

	* gtk/gtktextbuffer.c: (gtk_text_buffer_class_init),
	(gtk_text_buffer_set_property), (gtk_text_buffer_get_property),
	(gtk_text_buffer_set_text): Add GtkTextBuffer::text (#172631)

Mon Apr  4 14:33:55 2005  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_get_active_text):